--- a/form_in_php/__react-app/html_statico/to_do_list/css.css
+++ b/form_in_php/__react-app/html_statico/to_do_list/css.css
@@ -55,3 +55,8 @@ border: 1px solid transparent;
 body {
     background-color: antiquewhite;
 }
+
+.name {
+    font-size: 25px;
+    font-weight: bold;
+}
